# skg

./: .dockerignore  .gitignore  BUG-self-containment.org  CLAUDE.md  Cargo.toml  Dear_Claude.org  MOTIVATIONS.md  OVERVIEW.org  README.md  README.org  TODO.org  after-merge.org  ai-agents.md  api-and-formats.md  api.md  bug_merge-loses-acquiree-content-bodies.org  claude-science.org  claude-to-jeff.org  complex-birth-to-simple-parent_v1.org  complex-birth-to-simple-parent_v2.org  complex-birth-to-simple-parent_v3.org  contentward-paths-in-search-plan.org  docker-transfer.org  docker.sh  emacs-tests.sh  faster-diff-analysis.org  feasible-now-probably.org  flatter-completion.org  git-diff-view-updates.org  glossary.md  herald-overhaul.org  hey-jeff-learn-this.org  hey-jeff.org  investigations.org  is-it-dead.org  jeff-should-weigh-in-on.org  lying-names.org  merge-feedback.md  next.org  noneclobber-might-be-duplicated.org  (+20 more)
.claude/: beep-if-main-agent.sh  settings.json
TODO/: BUG_reciprocal-subscribe.org  a-juicy-correctness-fix.org  better-than-regex-in-emacs-tests.org  birth-to-parent.org  change-command-names-and-aliases.org  command-name-echo.org  delete-this-code-rewriting-tests.org  diff-render-roundtrip.org  docker-unification-strategies.org  faster-tests-progress.org  faster-tests.org  feasible-now-probably.org  fork-fixes-progress.org  fork-fixes.org  herald-tweaks-progress.org  herald-tweaks.org  heralds-semantic-wire-progress.org  inactive-nodes-ids-and-sources.org  incremental-init-might-be-broken.org  maybe-bug_subscribeecol-render.org  more.org  potential-optimizations.org  problems.org  problems_progress.org  roleCol-type.org  show-metadata.org  simpler-save.org  sources-have-no-stats.org  strip-inactive-node-fields-progress.org  strip-inactive-node-fields.org  typedb-performance-research.org  what-affects-dbs.org  windows-installer.org
_burying/: could-resurrect.org
bash/: all-tests.sh  claude-usage-poller.sh  claude-usage.sh  docker.sh  emacs-tests.sh  etags-rebuild.sh  import-org-roam.sh  integration-tests.sh  migrate-to-author-folders.sh  mk-etags.sh  nextest.sh  nvim-tests.sh  run-servers.sh  start-servers.sh  test-runner-lib.sh
claude-thoughts/: commit-146199b3.md  commit-146199b3_notes-before-writing.md
coding-advice/: ORIENTATION.org  ai-agents.org  architecture.md  architecture.org  checking-usage-limits.org  claude-to-claude.org  common-gotchas.md  development-process.md  docker.org  for-ai.md  formatting.md  formatting.org  naming.org  pitfall-bytes-vs-characters.org  some-good-refactors.md  when-to-stop.org
data/: 1.skg  skgconfig.toml
devel-handy/: TODO.org  all-code.sh  el.el  files-to-print.txt  misc.el  misc.sh  one-file.sh  rebuild-etags.sh  sh.sh  snippets.sh  to-one-file.sh
discoveries/: README.md
docs/: COMMANDS-nvim.org  COMMANDS.org  FAQ.md  OVERVIEW-old.org  README-old.org  accordions.md  content-model.md  cool-tech-in-skg.md  data-model-skg-extensions.md  data-model-trees-with-links.md  data-model.md  data-model.org  diffs-are-clearer-in-skg.md  done.org  forks.md  format-example.skg  hyperlinks.md  integrate-public-and-private.md  it-will-be-fun.md  knowledge-gardening-is-zen.md  lenses.md  merging.org  moving-nodes-across-repos.org  multidimensional-trees.md  networking-and-scale.md  novelty.md  ownership-has-been-awkward.md  plaintext-and-interoperability.md  preempt.md  private-writing.md  progress.md  public-writing.md  setup.org  sharing-is-good.md  sharing-is-powerful.md  sharing-model.md  skg-enables-deep-sharing.md  some-underlying-beliefs.org  synonyms-for-concept-mapping.md  telescopes.md  (+7 more)
elisp/: COMMANDS.org  PITFALLS.md  PITFALLs.org  USAGE.md  client.el  get-document.el  heralds-minor-mode.el  heralds.el  id-search.el  init.el  length-prefix.el  lens-heralds.el  main.el  org-ancestry.el  org-sexp.el  org-to-sexp.el  search.el  sexp-org-bijection.el  skg-buffer.el  skg-client.el  skg-commands.el  skg-config.el  skg-file-minor-mode.el  skg-focus.el  skg-git-add.el  skg-id-search.el  skg-init.el  skg-keymaps-and-aliases.el  skg-length-prefix.el  skg-log.el  skg-magit-titles.el  skg-metadata.el  skg-minor-mode.el  skg-modify-graph.el  skg-new-empty-view.el  skg-org-fold.el  skg-readable-ids.el  skg-reload.el  skg-request-backward-view.el  skg-request-containerward-view.el  (+34 more)
example-data/: README.md  skgconfig.toml
expand-content/: initial-alias-procedure.org  plan_handle-alias-requests-like-sourceward-ones.org
experiments-done/: cascading_delete_in_typedb.rs
git-diff-view/: big-plan.org  git-test-spec.org  initial-sketch.org  test-spec.org
herald-overhaul/: plan.org
introspect/: call_graph.rs  locate_original_leafward_definitions.sh  skg_filenames_match_pids.rs
merge-temp-docs/: fn-merge_nodes_in_graph.md  implementation-progress.md  merge-plan.md  other-ideas.md  plans-high-level.md  plans-low-level.md
multi-source/: CURRENT-STATUS.md  phase5-analysis.md  phase5-batching-analysis.md  phase5-locations.md  plan.org  surprises.org  temporary-changes.org
nvim/: README.org
org-exports/: org_export_is_partial.org
ralph/: README.md  repeated.sh  request-example.txt
refactor-ongoing/: functions.org  plan.org  skgnodes-in-map-not-tree.org
rust/: bfs_limit_for_dfs_render.rs  cleanup.rs  compute_viewdata.rs  config.rs  file_io.rs  from_text.rs  hyperlinks.rs  index2.rs  index_titles.rs  init.rs  lib.rs  links.rs  main.rs  media.rs  merge.rs  mk_org_text.rs  new.rs  org_to_text.rs  read_buffer.rs  rebuild.rs  render.rs  save.rs  serve.rs  sexp_to_vector.rs  tantivy.rs  test_utils.rs  text_to_orgnodes.rs  textlinks.rs  to-one-file.sh  to_org.rs  typedb.rs  types.rs  util.rs
server/: cleanup.rs  consts.rs  context.rs  dbs.rs  env.rs  export_org.rs  from_text.rs  git_ops.rs  herald_tokens.rs  heralds.rs  import_org_roam.rs  lib.rs  main.rs  merge.rs  metadata_canon.rs  nodeMerge.rs  org_to_text.rs  save.rs  serve.rs  source_sets.rs  (+5 more)
tools/introspect/call-graph/: Cargo.toml  README.org  call-graph-regen.rs  call-graph.rs
tools/introspect/code-map/: Cargo.toml  README.org  code-map-regen.rs  code-map.rs
(+2099 files in other folders)
