[workspace]
members = ["tools/introspect/code-map", "tools/introspect/call-graph", "tools/scope-reducer"]

[package]
name = "skg"
version = "0.1.0"
edition = "2024"

[lib]
path = "server/lib.rs"

[[bin]]
name = "skg"
path = "server/main.rs"

[[bin]]
name = "skg_filenames_match_pids"
path = "tools/introspect/skg_filenames_match_pids.rs"

[[bin]]
name = "cleanup-test-dbs"
path = "tools/cleanup-test-dbs.rs"

[[bin]]
name = "delete-one-db"
path = "tools/delete-one-db.rs"

[[bin]]
name = "smsn-keywords"
path = "discoveries/smsn/find-keywords.rs"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
ctrlc = "3.4"
ego-tree = "0.6"
filetime = "0.2"
futures = "0.3"
git2 = "0.18"
indoc = "2"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
# serde_json = "1.0"
sexp = "1.1"
similar = "2.2.1"
tantivy = "0.19.0"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
typedb-driver = "3.4.4"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.4"
zstd = "0.13"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[lints.rust]
unused_parens = "allow"
non_snake_case = "allow"