[workspace]
members = ["tools/introspect/code-map", "tools/introspect/call-graph", "tools/introspect/change-forest", "tools/scope-reducer", "tools/rust-field-tags"]

[package]
name = "skg"
version = "0.1.0"
edition = "2024"
# Every tests/*.rs file used to auto-become its own ~quarter-GB test
# binary; relinking all of them after any server/ change dominated
# the test cycle (TODO/faster-tests.org). The explicit [[test]]
# targets below group them into a few binaries instead.
autotests = false

[lib]
path = "server/lib.rs"

[[bin]]
name = "skg"
path = "server/main.rs"

[[bin]]
name = "skg_filenames_match_pids"
path = "tools/introspect/skg_filenames_match_pids.rs"

[[bin]]
name = "cleanup-test-dbs"
path = "tools/cleanup-test-dbs.rs"

[[bin]]
name = "emit-herald-rules"
path = "tools/emit-herald-rules.rs"

[[bin]]
name = "trim-node-bodies"
path = "tools/trim-node-bodies.rs"

[[bin]]
name = "delete-one-db"
path = "tools/delete-one-db.rs"

[[bin]]
name = "smsn-keywords"
path = "thoughts/smsn/find-keywords.rs"

[[bin]]
name = "bench-context"
path = "tools/bench-context.rs"

[[bin]]
name = "bench-context-inmemory"
path = "tools/bench-context-inmemory.rs"

[[bin]]
name = "bench-audit"
path = "tools/bench-audit.rs"

[[bin]]
name = "probe-audit"
path = "tools/probe-audit.rs"

[[bin]]
name = "top-contents"
path = "tools/top-contents.rs"

[[bin]]
name = "top-contentward-descendants"
path = "tools/top-contentward-descendants.rs"

[[bin]]
name = "bench-diff-analysis"
path = "tools/bench-diff-analysis.rs"

[[bin]]
name = "function_conversions_for_refactor"
path = "tools/function_conversions_for_refactor/function_conversions_for_refactor.rs"

[[test]]
name = "grouped_unit"
path = "tests/grouped_unit.rs"

[[test]]
name = "grouped_views"
path = "tests/grouped_views.rs"

[[test]]
name = "grouped_overrides"
path = "tests/grouped_overrides.rs"

[[test]]
name = "grouped_saves"
path = "tests/grouped_saves.rs"

[[test]]
name = "grouped_sources"
path = "tests/grouped_sources.rs"

[[test]]
name = "git_diff_view"
path = "tests/git_diff_view.rs"

[[test]]
name = "git_diff_view_partner_cols"
path = "tests/git_diff_view_partner_cols.rs"

[dependencies]
arc-swap = "1"
async-std = { version = "1.12", features = ["attributes"] }
ctrlc = { version = "3.4", features = ["termination"] }
ego-tree = "0.6"
filetime = "0.2"
futures = "0.3"
git2 = "0.18"
im = "15"
indoc = "2"
itertools = "0.14"
libc = "0.2"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
# serde_json = "1.0"
sexp = "1.1"
similar = "2.2.1"
tantivy = "0.26.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
# Pinned exactly to the TypeDB server version in
# docker-typedb-rust/typedb.nix. The driver makes breaking API changes
# within its 3.x series (see that repo's PITFALLS.org), so an exact pin
# keeps a stray `cargo update` from drifting the driver out of step with
# the server. Bump both together.
typedb-driver = "=3.11.5"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.4"
zstd = "0.13"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[lints.rust]
unused_parens = "allow"
non_snake_case = "allow"
non_camel_case_types = "allow"
